<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_login_gradient"
    android:fillViewport="true"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_logo"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/verifying_your_number"/>
        <TextView
            android:id="@+id/txtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textSize="20dp"
            android:textColor="@color/colorText1"
            android:text="+20 12345678"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/colorText1"
            android:text="@string/we_have_sent_a_verification_code_"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/editVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textAlignment="center"
                android:inputType="number"
                android:hint="@string/verification_code"
                android:background="@drawable/back_edittext_item"/>

            <Button
                android:id="@+id/btnVerify"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/verify"
                android:textColor="@android:color/white"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/colorText1"
                    android:text="@string/wrong_number"/>
                <TextView
                    android:id="@+id/txtSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorButtonOrange"
                    android:textAlignment="textEnd"
                    android:text="@string/sign_up"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnResend"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/back_button_reverse"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>