<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/dialogTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/change_password"
        android:textSize="18dp"
        android:textColor="@color/colorText1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_password"
        android:textSize="16dp"
        android:textColor="@color/colorText2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editCurrentPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorText2"
        android:background="@drawable/back_edittext_item"
        android:inputType="numberPassword" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="16dp"
        android:textColor="@color/colorText2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editNewPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorText2"
        android:background="@drawable/back_edittext_item"
        android:inputType="numberPassword" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="16dp"
        android:textColor="@color/colorText2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editConfirmPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="@color/colorText2"
        android:background="@drawable/back_edittext_item"
        android:inputType="numberPassword" />
</LinearLayout>