<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpgradeMembershipActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_contact_us"/>
            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorText1"
                android:gravity="center_vertical"
                android:text="@string/once_you_would_upgrade_to_premium_"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_wallet"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSuccessButton"
                    android:text="@string/current_balance"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="2dp"
                        android:textSize="16dp"
                        android:text="E£"/>
                    <TextView
                        android:id="@+id/txtWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textColor="@color/colorAccent"
                        android:text="55.25"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgCoin"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_coin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSuccessButton"
                    android:text="@string/add_coin"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnUpgradeMonthly"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textAllCaps="false"
                android:padding="12dp"
                android:text="@string/upgrade_monthly"/>
            <TextView
                android:id="@+id/txtMonthlyAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:text="@string/you_cant_upgrade_to_monthly_"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnUpgradeYearly"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:padding="12dp"
                android:text="@string/upgrade_yearly"/>
            <TextView
                android:id="@+id/txtYearlyAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="10dp"
                android:text="@string/you_cant_upgrade_to_yearly_"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>