<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragments.InviteFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="bottom">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_contact_us"/>
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textSize="17dp"
                android:textColor="@color/colorText1"
                android:gravity="center_vertical"
                android:text="@string/we_value_friendship_at_exactly_"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textColor="@color/colorText2"
            android:gravity="center_vertical"
            android:text="@string/refer_your_friends_to_us"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/your_promocode"/>
            <TextView
                android:id="@+id/txtPromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="20dp"
                android:textColor="@color/colorText1"
                android:text="12345678"/>
            <ImageView
                android:id="@+id/imgCopy"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_copy"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/invite_picture"/>
    </LinearLayout>

</FrameLayout>